--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 06:19:00 AM</p>
+    <p class="lastupdate">09/05/2020 06:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.2&#176;F</td>
+        <td class="data">49.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">66%</td>
+        <td class="data">64%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.933 inHg (0.012)</td>
+        <td class="data">29.941 inHg (0.019)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph WSW (248&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="01:40:59 AM">
             51.6</span><br/>
-          <span title="05:39:39 AM">
-            49.7</span>
+          <span title="06:23:41 AM">
+            49.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:24:38 PM (Wednesday)">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="05:28:11 AM">
-            66</span><br/>
+          <span title="06:20:27 AM">
+            67</span><br/>
           <span title="12:00:01 AM">
             42</span>
         </td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="06:06:01 AM">
-            29.938</span><br/>
+          <span title="06:23:01 AM">
+            29.941</span><br/>
           <span title="04:08:01 AM">
             29.913</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 15 hours, 32 minutes</td>
+      <td class="data">3 days, 15 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 15 hours, 32 minutes</td>
+      <td class="data">3 days, 15 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
