--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 08:29:00 AM</p>
+    <p class="lastupdate">09/05/2020 08:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">66.5&#176;F</td>
+        <td class="data">67.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">66.5&#176;F</td>
+        <td class="data">67.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">66.5&#176;F</td>
+        <td class="data">67.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.7&#176;F</td>
+        <td class="data">51.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">59%</td>
+        <td class="data">58%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.964 inHg (0.043)</td>
+        <td class="data">29.961 inHg (0.033)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">2 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.1&#176;F</td>
+        <td class="data">76.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="08:24:00 AM">
-            51.8</span><br/>
+          <span title="08:31:32 AM">
+            52.0</span><br/>
           <span title="06:23:41 AM">
             49.4</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 17 hours, 42 minutes</td>
+      <td class="data">3 days, 17 hours, 48 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 17 hours, 42 minutes</td>
+      <td class="data">3 days, 17 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
