--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 08:39:00 AM</p>
+    <p class="lastupdate">09/05/2020 08:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">67.7&#176;F</td>
+        <td class="data">68.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">67.7&#176;F</td>
+        <td class="data">68.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">67.7&#176;F</td>
+        <td class="data">68.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.9&#176;F</td>
+        <td class="data">52.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">57%</td>
+        <td class="data">56%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.961 inHg (0.035)</td>
+        <td class="data">29.961 inHg (0.036)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 17 hours, 52 minutes</td>
+      <td class="data">3 days, 17 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 17 hours, 52 minutes</td>
+      <td class="data">3 days, 17 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
